# hack-club-dashboard

./: .gitignore  .replit  Dockerfile  README.md  SECURITY.md  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--2025-06-13T02-12-25-494109941Z-Loading-env-file-2025-06-13T02-12-25-494268799Z-sh-8-en-1749780829345_1749780829346.txt  Pasted--2025-06-13T02-16-04-238331253Z-sh-8-env-Project-not-found-2025-06-13T02-16-04-238356270Z-1749781042206_1749781042207.txt  Pasted--Deployment-is-Failed-2025-Jun-13-04-00-08-931298-Starting-deployment-of-hackclub-club-dashb-1749787281110_1749787281111.txt  Pasted--workspace-gunicorn-bind-0-0-0-0-5000-workers-4-timeout-120-log-level-info-access-logfil-1749780201865_1749780201865.txt  Pasted-17-49-15-190510640Z-File-usr-local-bin-gunicorn-line-8-in-module-2025-06-20T17-49-15-19051-1750441950227_1750441950229.txt  Pasted-172-31-128-16-07-Jun-2025-21-18-10-GET-static-assets-Dinos-jpg-HTTP-1-1-304-172-31-128-1-1749331116317_1749331116318.txt  Pasted-2025-06-16T23-31-02-008463563Z-172-18-0-95-16-Jun-2025-23-31-02-0000-GET-admin-HTTP-1-1-20-1750117928694_1750117928694.txt  Pasted-2025-06-16T23-31-02-008463563Z-172-18-0-95-16-Jun-2025-23-31-02-0000-GET-admin-HTTP-1-1-20-1750118056555_1750118056555.txt  Pasted-2025-06-20T17-49-15-191471551Z-2025-06-20T17-49-15-191474026Z-File-usr-local--1750442855388_1750442855389.txt  Pasted-31-128-37-INFO-main-Session-created-for-user-Ethan-session-id-4-logged-in-True-INFO-werkzeug-172-3-1749399777054_1749399777056.txt  berkeley_high_club_plan_template_1749396889006.csv  (+8 more)
(+31 files in other folders)
